fix align items for central window in auth page

--- a/src/page-components/ConnectWalletPage/ConnectWalletPage.module.css
+++ b/src/page-components/ConnectWalletPage/ConnectWalletPage.module.css
@@ -4,6 +4,7 @@
   background: #000 0% 0% no-repeat padding-box;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .title {
